// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Should allow rendering as a custom tag 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  border-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  position: relative;
  display: inline-block;
  width: auto;
  min-height: 44px;
  padding: 8px 16px;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.4;
  white-space: nowrap;
  text-align: center;
  -webkit-text-wrap: auto;
  text-wrap: auto;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline-offset: 4px;
}

.c0:not(:disabled):hover {
  border-color: #0139a7;
  color: #ffffff;
  background-color: #0139a7;
}

.c0:not(:disabled):active {
  border-color: #012e85;
  background-color: #012e85;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

@supports (text-wrap:pretty) {
  .c0 {
    text-wrap: pretty;
  }
}

<div>
  <button
    class="c0"
    data-testarg="test"
    type="submit"
  >
    <span
      class="c1"
    >
      <span>
        Click me
      </span>
    </span>
  </button>
</div>
`;

exports[`Should allow rendering as an anchor tag 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  border-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  position: relative;
  display: inline-block;
  width: auto;
  min-height: 44px;
  padding: 8px 16px;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.4;
  white-space: nowrap;
  text-align: center;
  -webkit-text-wrap: auto;
  text-wrap: auto;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline-offset: 4px;
}

.c0:not(:disabled):hover {
  border-color: #0139a7;
  color: #ffffff;
  background-color: #0139a7;
}

.c0:not(:disabled):active {
  border-color: #012e85;
  background-color: #012e85;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0[aria-disabled="true"] {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0[aria-disabled="true"]:focus,
.c0[aria-disabled="true"]:hover {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

@supports (text-wrap:pretty) {
  .c0 {
    text-wrap: pretty;
  }
}

<div>
  <a
    class="c0"
    href="/test"
  >
    <span
      class="c1"
    >
      <span>
        Click me
      </span>
    </span>
  </a>
</div>
`;

exports[`Should render as button by default 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  border-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  position: relative;
  display: inline-block;
  width: auto;
  min-height: 44px;
  padding: 8px 16px;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.4;
  white-space: nowrap;
  text-align: center;
  -webkit-text-wrap: auto;
  text-wrap: auto;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0:focus {
  outline-offset: 4px;
}

.c0:not(:disabled):hover {
  border-color: #0139a7;
  color: #ffffff;
  background-color: #0139a7;
}

.c0:not(:disabled):active {
  border-color: #012e85;
  background-color: #012e85;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

@supports (text-wrap:pretty) {
  .c0 {
    text-wrap: pretty;
  }
}

<div>
  <button
    class="c0"
    type="button"
  >
    <span
      class="c1"
    >
      <span>
        Click me
      </span>
    </span>
  </button>
</div>
`;

exports[`Should render loading spinner and hide text when loading 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  border-color: transparent;
  color: #ffffff;
  background-color: #024ddf;
  position: relative;
  display: inline-block;
  width: auto;
  min-height: 44px;
  padding: 8px 16px;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.4;
  white-space: nowrap;
  text-align: center;
  -webkit-text-wrap: auto;
  text-wrap: auto;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c0:not(:disabled) {
  cursor: wait;
}

.c0:focus {
  outline-offset: 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: hidden;
}

.c3 {
  position: absolute;
  inset: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  color: #ffffff;
}

.c4::before {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  border-color: #ffffff;
  border-style: solid;
  border-width: calc(24px / 10);
  border-inline-start-color: rgba(255,255,255,0.25);
  border-radius: 50%;
  -webkit-animation: iOtnio 0.75s linear infinite !important;
  animation: iOtnio 0.75s linear infinite !important;
  content: "";
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

@supports (text-wrap:pretty) {
  .c0 {
    text-wrap: pretty;
  }
}

<div>
  <button
    class="c0"
    type="button"
  >
    <span
      class="c1"
    >
      <span>
        Click me
      </span>
    </span>
    <span
      aria-live="assertive"
      class="c2"
      role="status"
    >
      Form submitting
    </span>
    <span
      class="c3"
    >
      <span
        class="c4"
      />
    </span>
  </button>
</div>
`;
